--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
+table {
+    max-width: 100%;
+    width: fit-content;
+    min-height: min-content;
+}
+
 table, th, td {
     border: 1px solid black;
     padding: 3px;
+    margin: 10px;
 }
 
 .box {
-    width: 200px;
-    height: 200px;
+    width: fit-content;
+    height: fit-content;
     border: 1px solid black;
-    margin-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+    margin: 10px;
+    padding: 10px;
 }
 
-.box-2 {
-    width: 200px;
-    height: 150px;
-    border: 1px solid black;
-    margin-top: 10px;
-    padding-right: 10px;
-    padding-left: 10px;
+nav {
+    background-color: lightblue;
+    padding: 10px;
+    text-align: center;
+}
+
+h2 {
+    margin: 15px;
 }
