Migrate Questions, Users, and Game_Rounds to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>DevDynasty Question Stats - {{title}}</title>
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" type="text/css" href="/style.css">
     </head>
     <body>
         <h1>{{title}}</h1>
         {{> nav}}
-        {{body}}
+        {{{body}}}
     </body>
 </html>
