Fix browse table headers

--- a/views/partials/browse_header.handlebars
+++ b/views/partials/browse_header.handlebars
@@ -3,6 +3,6 @@
         {{#each data.[0]}}
         <th>{{@key}}</th>
         {{/each}}
-        <th></th>
+        {{#if button}}<th></th>{{/if}}
     </tr>
 </thead>
