--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -1,7 +1,7 @@
 <div class="box">
     <h2>Browse Users</h2>
     <table>
-        {{> browse_header}}
+        {{> browse_header button=true}}
         <tbody>
             {{#each data}}
             <tr>
