--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -1,7 +1,7 @@
 <div>
     <h2>Browse Game_Rounds</h2>
     <table>
-        {{> browse_header}}
+        {{> browse_header button=true}}
         <tbody>
             {{#each data}}
             <tr>
