--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -1,7 +1,7 @@
 <div class="box">
 <h2>Browse Questions</h2>
 <table>
-    {{> browse_header}}
+    {{> browse_header button=true}}
     <tbody>
         {{#each data}}
         <tr>
