--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -4,16 +4,18 @@
         {{> browse_header button=true}}
         <tbody>
             {{#each data}}
-            <tr>
+            <tr row-id={{this.roundID}}>
                 <td>{{#if this.roundID}}{{this.roundID}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.username}}{{this.username}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.score includeZero=true}}{{this.score}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.time}}{{this.time}}{{else}}NULL{{/if}}</td>
-                <td><button id="delete">Delete</button></td>
+                <td><button onclick="deleteRound({{this.roundID}})">Delete</button></td>
             </tr>
             {{/each}}
         </tbody>
     </table>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="/js/delete_round.js" defer></script>
 </div>
 
 <div class="box">
