--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -4,15 +4,16 @@
         {{> browse_header button=true}}
         <tbody>
             {{#each data}}
-            <tr>
+            <tr row-id={{this.userID}}>
                 <td>{{#if this.userID}}{{this.userID}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.username}}{{this.username}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.password}}{{this.password}}{{else}}NULL{{/if}}</td>
-                <td><button id="delete">Delete</button></td>
+                <td><button onclick="deleteUser({{this.userID}})">Delete</button></td>
             </tr>
             {{/each}}
         </tbody>
     </table>
+    <script src="/js/delete_user.js" type="text/js" defer></script>
 </div>
 
 <div class="box">
