Add DELETE and UPDATE for Game_Rounds (intersection table stuff not included)

--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -4,8 +4,8 @@
     {{> browse_header button=true}}
     <tbody>
         {{#each data}}
-        <tr>
-            <td>{{#if this.questionID}}{{this.username}}{{else}}NULL{{/if}}</td>
+        <tr row-id={{this.questionID}}>
+            <td>{{#if this.questionID}}{{this.questionID}}{{else}}NULL{{/if}}</td>
             <td>{{#if this.questionText}}{{this.questionText}}{{else}}NULL{{/if}}</td>
             <td>{{#if this.typeName}}{{this.typeName}}{{else}}NULL{{/if}}</td>
             <td><button onclick="deleteQuestion({{this.questionID}})">Delete</button></td>
