--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -30,7 +30,7 @@
                 {{/each}}
             </select>
         </div>
-        
+
         <div>
             <label for="input-score">Score: </label>
             <input type="text" name="input-score" id="input-score">
@@ -50,31 +50,28 @@
 
 <div class="box">
     <h2>Update Game_Round</h2>
-    <form action="" method="get" class="form-example">
+    <form id="update-round-form">
         <div>
-            <label for="user">Round ID: </label><select name="roundID" required>
-                <option selected>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-                <option>6</option>
+            <label for="round-id-update-select">Round ID: </label>
+            <select id="round-id-update-select" name="round-id-update-select" required>
+                {{#each data}}
+                    <option value="{{this.roundID}}">{{this.roundID}}</option>
+                {{/each}}
             </select>
         </div>
         <div>
-            <label for="user">Username: </label><select name="user" required>
-                <option selected>None</option>
-                <option>Rob_Hess</option>
-                <option>Annette_Tongsak</option>
-                <option>Oria_Weng</option>
-                <option>Deepti_Ravidath</option>
-                <option>Jon</option>
+            <label for="round-username-select">Username: </label>
+            <select id="round-username-select" name="round-username-select" required>
+                <option value="None">None</option>
+                {{#each usernames}}
+                    <option value="{{this.userID}}">{{this.username}}</option>
+                {{/each}}
             </select>
         </div>
-        <div><label for="score">Score: </label><input type="number" name="score" min="0"></div>
-        <div><label for="time">Time (hh:mm:ss): </label><input type="text" name="time" pattern="[0-9]{2}:[0-9]{2}:[0-9]{2}"></div>
+        <div><label for="round-score-input">Score: </label><input type="number" name="round-score-input" id="round-score-input" min="0"></div>
+        <div><label for="round-time-input">Time (hh:mm:ss): </label><input type="text" name="round-time-input" id="round-time-input" pattern="[0-9]{2}:[0-9]{2}:[0-9]{2}"></div>
         <div>
-            <fieldset required>
+            <fieldset>
                 <legend>Questions:</legend>
                     <div><input type="checkbox" id="q1" name="q1" /><label for="q1">How have you dealt with a team member not pulling their weight in the past?</label></div>
                     <div><input type="checkbox" id="q2" name="q2" /><label for="q2">Describe a time when you faced a tight deadline or a high-pressure situation. How did you handle the stress, and what was the outcome?</label></div>
@@ -83,5 +80,5 @@
         </div>
         <input type="submit">
     </form>
+    <script src="./js/update_round.js" defer></script>
 </div>
-
