--- a/views/partials/browse_header.handlebars
+++ b/views/partials/browse_header.handlebars
@@ -3,6 +3,7 @@
         {{#each data.[0]}}
         <th>{{@key}}</th>
         {{/each}}
-        {{#if button}}<th></th>{{/if}}
+        {{!-- Why is this here? --}}
+        {{!-- {{#if button}}<th></th>{{/if}} --}}
     </tr>
 </thead>
