--- a/views/partials/browse_header.handlebars
+++ b/views/partials/browse_header.handlebars
@@ -3,7 +3,6 @@
         {{#each data.[0]}}
         <th>{{@key}}</th>
         {{/each}}
-        {{!-- Why is this here? --}}
-        {{!-- {{#if button}}<th></th>{{/if}} --}}
+        {{#if button}}<th></th>{{/if}}
     </tr>
 </thead>
