Fix insertion of null userIDs

--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -24,7 +24,7 @@
         <div>
             <label for="input-userID">Username: </label>
             <select name="input-userID" id="input-userID">
-                <option value="">Select a username</option>
+                <option value="">None</option>
                 {{#each usernames}}
                 <option value="{{this.userID}}">{{this.username}}</option>
                 {{/each}}
