--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -38,7 +38,7 @@
 
         <div>
             <label for="input-time">Time (hh:mm:ss): </label>
-            <input type="text" name="input-time" id="input-time" pattern="[0-9]{2}:[0-9]{2}:[0-9]{2}">
+            <input type="text" name="input-time" id="input-time" pattern="[0-9]{2}:[0-5][0-9]:[0-5][0-9]">
         </div>
 
         <input type="submit">
