Add hint for score range

--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -32,8 +32,8 @@
         </div>
 
         <div>
-            <label for="input-score">Score: </label>
-            <input type="text" name="input-score" id="input-score">
+            <label for="input-score">Score (non-negative): </label>
+            <input type="number" name="input-score" id="input-score" min="0">
         </div>
 
         <div>
