Use individual number boxes for time input

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,3 +64,11 @@ option {
     text-wrap: wrap;
     max-width: 80vw;
 }
+
+#input-time, #round-time-input {
+    display: inline;
+}
+
+.input-time-field {
+    max-width: 5vw;
+}
