Add hint for score range for update form

--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -74,7 +74,7 @@
                 {{/each}}
             </select>
         </div>
-        <div><label for="round-score-input">Score: </label><input type="number" name="round-score-input" id="round-score-input" min="0"></div>
+        <div><label for="round-score-input">Score (non-negative): </label><input type="number" name="round-score-input" id="round-score-input" min="0"></div>
         <div>
             <label for="round-time-input">Time: </label>
             <div id="round-time-input">
