Add delete functionality for Users; show no data message when all data is deleted for Users and Game_Rounds

--- a/views/partials/browse_header.handlebars
+++ b/views/partials/browse_header.handlebars
@@ -1,8 +1,10 @@
 <thead>
     <tr>
-        {{#each data.[0]}}
-        <th>{{@key}}</th>
-        {{/each}}
-        {{#if button}}<th></th>{{/if}}
+        {{#if data}}
+            {{#each data.[0]}}
+            <th>{{@key}}</th>
+            {{/each}}
+            {{#if button}}<th></th>{{/if}}
+        {{else}}<th>No data to display</th>{{/if}}
     </tr>
 </thead>
