Add user insertion

--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -19,7 +19,7 @@
 
 <div class="box">
     <h2>Insert User</h2>
-    <form action="" method="get" class="form-example">
+    <form id="insert-user-form-ajax" class="form-example">
         <div class="form-example"><label for="user-name-input">Username: </label><input type="text" name="name" id="user-name-input" required></div>
         <div class="form-example"><label for="user-password-input">Password: </label><input type="text" name="password" id="user-password-input" required></div>
         <input type="submit">
