--- a/views/answers.handlebars
+++ b/views/answers.handlebars
@@ -17,22 +17,21 @@
 
 <div class="box">
     <h2>Insert Answer<h2>
-    <form action="" method="get" class="form-example">
+    <form id="insert-answer-form-ajax" class="form-example">
         <div class="form-example">
             <label for="questionID">Question Text:</label>
             <select name="questionID" id="questionID">
-            <option value="1">How have you dealt with a team member not pulling their weight in the past?</option>
-            <option value="2">Describe a time when you faced a tight deadline or a high-pressure situation. How did you handle the stress, and what was the outcome?</option>
-            <option value="3">Consider two sorting algorithms: Algorithm A with a time complexity of O(n log n) and Algorithm B with a time complexity of O(n^2). Under what conditions might you choose Algorithm B over Algorithm A?</option>
+                {{#each questionTexts}}
+                    <option value="{{this.questionID}}">{{this.questionText}}</option>
+                {{/each}}
             </select>
         </div>
         <div class="form-example">
             <label for="correctness">Correctness:</label>
 
             <select name="correctness" id="correctness">
-            <option value="0">0 (Not correct)</option>
-            <option value="1">1 (Correct)</option>
-
+                <option value="0">0 (Not correct)</option>
+                <option value="1">1 (Correct)</option>
             </select>
         </div>
         <div class="textarea-input">
