--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -13,7 +13,8 @@
             {{/each}}
         </tbody>
     </table>
-    <script src="/js/delete_question.js" defer></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="./js/delete_question.js" defer></script>
 </div>
 
 <div class="box">
