--- a/views/game_rounds.handlebars
+++ b/views/game_rounds.handlebars
@@ -87,5 +87,5 @@
         </div>
         <input type="submit">
     </form>
-    <script src="./js/update_round.js" defer></script>
+    <script src="/js/update_round.js" defer></script>
 </div>
