--- a/views/rounds_questions.handlebars
+++ b/views/rounds_questions.handlebars
@@ -1,16 +1,19 @@
 <div class="box">
     <h2>Browse Rounds_Questions</h2>
-    <table id="rounds-questions-table">
-        {{> browse_header}}
+    <table id="rounds_questions-table">
+        {{> browse_header button=true}}
         <tbody>
             {{#each data}}
-            <tr round-id={{this.roundID}}>
+            <tr row-round-id={{this.roundID}} row-question-text="{{this.questionText}}">
                 <td>{{#if this.roundID}}{{this.roundID}}{{else}}NULL{{/if}}</td>
                 <td>{{#if this.questionText}}{{this.questionText}}{{else}}NULL{{/if}}</td>
+                <td><button onclick="deleteRoundsQuestion({{this.roundID}}, '{{this.questionText}}')">Delete</button></td>
             </tr>
             {{/each}}
         </tbody>
     </table>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" defer></script>
+    <script src="/js/delete_rounds_question.js" defer></script>
 </div>
 
 <div class="box">
@@ -85,36 +88,6 @@
         <br>
         <div class="form-example">
         <input type="submit" value="Update Rounds_Questions" />
-        </div>
-    </form>
-</div>
-
-<div class="box">
-    <h2>Delete Round_Question</h2>
-    <form action="" method="get" class="form-example">
-        <div class="form-example">
-            <label for="roundID-delete">Round ID:</label>
-
-            <select name="roundID-delete" id="roundID-delete">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            </select>
-        </div>
-        <div class="form-example">
-            <label for="questionID-delete">Question Text:</label>
-
-            <select name="questionID-delete" id="questionID-delete">
-            <option value="1">How have you dealt with a team member not pulling their weight in the past?</option>
-            <option value="2">Describe a time when you faced a tight deadline or a high-pressure situation. How did you handle the stress, and what was the outcome?</option>
-            <option value="3">Consider two sorting algorithms: Algorithm A with a time complexity of O(n log n) and Algorithm B with a time complexity of O(n^2). Under what conditions might you choose Algorithm B over Algorithm A?</option>
-            </select>
-        </div>
-
-        <div class="form-example">
-        <input type="submit" value="Delete Rounds_Questions" />
         </div>
     </form>
 </div>
