--- a/views/rounds_questions.handlebars
+++ b/views/rounds_questions.handlebars
@@ -44,8 +44,8 @@
     <h2>Update Round_Question</h2>
     <form id="update-round-question" class="form-example">
         <div class="form-example">
-            <label for="roundID-update">Round ID:</label>
-            <select name="roundID-update" id="roundID-update">
+            <label for="input-roundID">Round ID:</label>
+            <select name="input-roundID" id="input-roundID">
                 {{#each roundIDs}}
                     <option value="{{this.roundID}}">{{this.roundID}}</option>
                 {{/each}}
