Fix mismatched label for Answers page

--- a/views/answers.handlebars
+++ b/views/answers.handlebars
@@ -19,8 +19,8 @@
     <h2>Insert Answer<h2>
     <form id="insert-answer-form-ajax" class="form-example">
         <div class="form-example">
-            <label for="questionID">Question Text:</label>
-            <select name="questionID" id="input-questionID">
+            <label for="input-questionID">Question Text:</label>
+            <select name="input-questionID" id="input-questionID">
                 {{#each questionTexts}}
                     <option value="{{this.questionID}}">{{this.questionText}}</option>
                 {{/each}}
