Fix updating dropdown on insert and update

--- a/views/rounds_questions.handlebars
+++ b/views/rounds_questions.handlebars
@@ -54,7 +54,7 @@
         <div class="form-example">
             <label for="input-questionID">Question Text:</label>
             <select name="input-questionID" id="input-questionID">
-                {{#each questionTextsUpdate}}
+                {{#each questionTextsUpdateDropdown}}
                     <option value="{{this.questionID}}">{{this.questionText}}</option>
                 {{/each}}
             </select>
